[gd_scene load_steps=14 format=2]

[ext_resource path="res://addons/awesome_splash/core/AspectNode.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/demo_collection/circle_jump_02/splash_screen.gd" type="Script" id=3]
[ext_resource path="res://src/demo_collection/circle_jump_02/src/ShapNode.gd" type="Script" id=4]
[ext_resource path="res://src/demo_collection/circle_jump_02/src/Logo.gd" type="Script" id=5]
[ext_resource path="res://addons/awesome_splash/assets/font/RobotoCondensed-Light.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://addons/awesome_splash/text_node/AweListTextNode.gd" type="Script" id=7]
[ext_resource path="res://addons/awesome_splash/text_node/AweTextNode.gd" type="Script" id=8]
[ext_resource path="res://addons/awesome_splash/assets/font/LilitaOne-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://src/demo_collection/circle_jump_02/src/logo.png" type="Texture" id=10]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void fragment() {
    vec4 color = vec4(1.0, 1.0, 1.0, 1.0);
	vec2 center = vec2(0.5, 0.5);
	float r = (UV.x - center.x) * (UV.x - center.x) + (UV.y - center.y) * (UV.y - center.y);
	if (r > 0.25) {
		color.a = 0.0;
	} else {
		color.a = r;
	}
    COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 120
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 230
font_data = ExtResource( 9 )

[node name="SplashCircleJump02" type="Node2D"]
script = ExtResource( 3 )

[node name="AspectNode" parent="." instance=ExtResource( 1 )]

[node name="OutlineFrame" parent="AspectNode" index="0"]
margin_left = 229.128
margin_top = 222.052
margin_right = 1629.13
margin_bottom = 1622.05

[node name="LogoContainer" type="Node2D" parent="AspectNode"]
script = ExtResource( 5 )

[node name="Logo" type="TextureRect" parent="AspectNode/LogoContainer"]
margin_left = -50.0
margin_right = 50.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 50, 50 )
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="Circle" type="ColorRect" parent="AspectNode/LogoContainer"]
visible = false
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -50.0
margin_right = 100.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 100, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShapNode" type="Node2D" parent="AspectNode/LogoContainer"]
script = ExtResource( 4 )

[node name="Line2D" type="Line2D" parent="AspectNode/LogoContainer/ShapNode"]
position = Vector2( -1.54288, 52.1203 )
points = PoolVector2Array( 0, 0, 0, 0.01 )
width = 100.0
default_color = Color( 1, 1, 1, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 20

[node name="InfoNode" type="Node2D" parent="AspectNode"]
script = ExtResource( 8 )
anchor = Vector2( 0.5, 0.5 )
font = SubResource( 3 )

[node name="TitleNode" type="Node2D" parent="AspectNode"]
script = ExtResource( 7 )
font = SubResource( 4 )
anchor = Vector2( 0.5, 1 )
char_anchor = Vector2( 0.5, 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[editable path="AspectNode"]
